# Lenguajes---Proyecto2

./: .gitignore  README.md
Proyecto 2/finanzas-personales/: CHANGELOG.md  LICENSE  finanzas-personales.cabal  finanzas-personales.cabal.save0
Proyecto 2/finanzas-personales/app/: Main.hs
Proyecto 2/finanzas-personales/data/: registros.txt
Proyecto 2/finanzas-personales/dist-newstyle/cache/: compiler  config
Proyecto 2/finanzas-personales/src/: Analisis.hs  MenuAnalisis.hs  Persistencia.hs  Presupuesto.hs  Registro.hs  Reglas.hs  Reportes.hs  Simulacion.hs  Types.hs
