cabal-version:      3.0
name:               finanzas-personales
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Proyecto2-Lenguajes
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable finanzas-personales
    import:           warnings
    main-is:          Main.hs

    -- ESTO ES LO QUE FALTABA: declarar todos los módulos
    other-modules:
        Types
        Registro
        Persistencia
        MyLib
        Presupuesto
        Analisis
        Simulacion
        MenuAnalisis

    build-depends:
        base ^>=4.18.3.0,
        directory >= 1.3

    hs-source-dirs:   app, src
    default-language: Haskell2010

test-suite finanzas-personales-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0